--- a/views/create.ejs
+++ b/views/create.ejs
@@ -22,24 +22,35 @@
             <div class="container">                 
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
+                        <% if(errors != null && errors.length > 0){ %>
+                            
+                            <ul class="list-group"></ul>
+                            <% for (var i = 0; i < errors.length; i++) { %>
+                            <li class="list-group-item list-group-item-danger"><%= errors[i] %></li>
+                            <% } %>
+                            </ul>
+                            <% } %>
                         <form action="/posts/store" method="POST" enctype="multipart/form-data">
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls">
                                     <label>Title</label>
-                                    <input type="text" class="form-control" placeholder="Title" id="title" name="title">
+                                    <input type="text" class="form-control" placeholder="Title" id="title" name="title" value="<%=
+                                    title %>">
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls">
                                     <label>Description</label>
-                                    <textarea rows="5" class="form-control" id="body" name="body"></textarea>
+                                    <textarea rows="5" class="form-control" id="body" name="body" value="<%=
+                                    body %>"></textarea>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls">
                                 <label>Image</label>
                                 <input type="file" class="form-control" id="image"
-                                name="image">
+                                name="image" value="<%=
+                                image %>">
                                 </div>
                                 </div>
                             <br>
