--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                                 <p class="post-meta">
                                     Posted by
                                     <a href="#">
-                                        <%= blogposts[i].username %>
+                                        <%= blogposts[i].userid.username %>
                                     </a>
                                     on <%= blogposts[i].datePosted.toDateString() %>
                                 </p>
