--- a/views/create.ejs
+++ b/views/create.ejs
@@ -19,7 +19,7 @@
                 </div>
             </header>
             <!-- Main Content-->
-            <div class="container">                 
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <form action="/posts/store" method="POST" enctype="multipart/form-data">
@@ -33,15 +33,20 @@
                                 <div class="form-group floating-label-form-group controls">
                                     <label>Description</label>
                                     <textarea rows="5" class="form-control" id="body" name="body"></textarea>
+                                    <script>
+                                    $('#body').summernote({
+                                    placeholder: 'Hello bootstrap 4',
+                                    tabsize: 2,height: 200
+                                    });
+                                    </script>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls">
-                                <label>Image</label>
-                                <input type="file" class="form-control" id="image"
-                                name="image">
+                                    <label>Image</label>
+                                    <input type="file" class="form-control" id="image" name="image">
                                 </div>
-                                </div>
+                            </div>
                             <br>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
